Increase z-index of nav to ensure it always covers other elements on page

--- a/dev/components/navigation/_navigation.scss
+++ b/dev/components/navigation/_navigation.scss
@@ -1,6 +1,6 @@
 .navigation {
     position: fixed;
-    z-index: 1;
+    z-index: 99;
     top: 0;
     left: 0;
     display: flex;
